# AC215_AgentNET

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  Dockerfile.dvc-cli  README.md  data_util.py  docker-compose.yml  docker-entrypoint.sh  docker-shell.sh  dvc-docker-entrypoint.sh  main.py  notion_agent.py  notion_mcp_bridge.py  orchestrator.py  package-lock.json  pyproject.toml  pytest.ini  requirements.txt
.dvc/: config
.github/workflows/: ci.yml  deploy.yml
AgentNetMCP/: .gitignore  DATABASE_INTEGRATION.md  INTEGRATION_COMPLETE.md  README.md  SETUP_GUIDE.md  client.js  cursor-mcp-config.json  database.js  debug-cursor-mcp.md  how-agent-uses-tools.md  mcp-server.js  package-lock.json  package.json  populate-db.js  server.js  test-integration.js  vector_search.py
DB/: schema.sql
Data/: mcp_server_tools.json  mcp_servers.csv
Data/HTMLData/: smithery_verified_page_1.html  smithery_verified_page_2.html  smithery_verified_page_3.html  smithery_verified_page_4.html  smithery_verified_page_5.html
docs/: milestone4.md  summarize_data_versions.py
src/datapipeline/: Dockerfile.dvc-cli  RAG.py  childPageExtract.py  docker-shell.sh  mcp_csv_to_json.py  mcp_description_csv_to_json.py  parentPageExtract.py
src/deployment/: Dockerfile  deploy.sh  deploy_update.sh  docker-entrypoint.sh  docker-shell.sh  docker_config.json
src/frontend-simple/: Dockerfile  app.js  config.js  docker-entrypoint.sh  docker-shell.sh  index.html  (+2 more)
tests/: README.md  conftest.py  test_app.py  test_main.py  test_notion_agent.py  test_rag.py  test_rag_legacy.py  test_workflow.py
(+87 files in other folders)
